refact: removed compiler warnings